[tool.poetry]
name = "ember"
version = "0.1.0"
description = "A GUI platform for reverse engineering, vulnerability research, and weird machine programming."
authors = ["Matt (drone) Revelle <drone@kududyn.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
PySide6 = "^6.3.0"
networkx = "^2.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
